_generated-doc/2.7/config/quarkus-security-security-build-time-config.adoc
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference, cols="80,.^10,.^10"]
|===

h|[[quarkus-security-security-build-time-config_configuration]]link:#quarkus-security-security-build-time-config_configuration[Configuration property]

h|Type
h|Default

a|icon:lock[title=Fixed at build time] [[quarkus-security-security-build-time-config_quarkus.security.deny-unannotated-members]]`link:#quarkus-security-security-build-time-config_quarkus.security.deny-unannotated-members[quarkus.security.deny-unannotated-members]`

[.description]
--
If set to true, access to all methods of beans that have any security annotations on other members will be denied by default. E.g. if enabled, in the following bean, `methodB` will be denied.  `@`ApplicationScoped public class A ++{++ `@`RolesAllowed("admin") public void methodA() ++{++ ... ++}++ public void methodB() ++{++ ... ++}++ ++}++
--|boolean 
|`false`

|===