_generated-doc/3.2/config/quarkus-security-security-build-time-config.adoc

:summaryTableId: quarkus-security-security-build-time-config
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference, cols="80,.^10,.^10"]
|===

h|[[quarkus-security-security-build-time-config_configuration]]link:#quarkus-security-security-build-time-config_configuration[Configuration property]

h|Type
h|Default

a|icon:lock[title=Fixed at build time] [[quarkus-security-security-build-time-config_quarkus.security.deny-unannotated-members]]`link:#quarkus-security-security-build-time-config_quarkus.security.deny-unannotated-members[quarkus.security.deny-unannotated-members]`


[.description]
--
If set to true, access to all methods of beans that have any security annotations on other members will be denied by default. E.g. if enabled, in the following bean, `methodB` will be denied.

```
@ApplicationScoped
  public class A {
     @RolesAllowed("admin")
     public void methodA() {
         ...
     }
     public void methodB() {
         ...
     }
  }
```

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_SECURITY_DENY_UNANNOTATED_MEMBERS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_SECURITY_DENY_UNANNOTATED_MEMBERS+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`

|===